@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-11
-Date: 2013-06-05
+Date: 2013-06-06
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
