@@ -223,6 +223,7 @@ export("+.section",
        swSigma,
        swSigmaT,
        swSigmaTheta,
+       swSoundAbsorption,
        swSoundSpeed,
        swSpecificHeat,
        swSpice,
